--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "picgo-worker",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.5",
-    "wrangler": "3.90.0"
+    "wrangler": "^3.91.0"
   },
   "private": true,
   "scripts": {
